--- a/Source/Panama/App.xaml
+++ b/Source/Panama/App.xaml
@@ -1,18 +1,28 @@
 ﻿<Application 
     x:Class="Restless.App.Panama.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:sys="clr-namespace:System;assembly=mscorlib"
-    xmlns:win="clr-namespace:System.Windows;assembly=PresentationFramework"
-    xmlns:local="clr-namespace:Restless.App.Panama"
-    xmlns:diag="clr-namespace:System.Diagnostics;assembly=WindowsBase">
-    
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Resources/App.Brushes.xaml"/>
-                <ResourceDictionary Source="Resources/App.Images.xaml"/>
-                <ResourceDictionary Source="Resources/App.Controls.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Values.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Converters.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Brushes.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Images.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/ControlDefault.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Button.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/TextBlock.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/TextBox.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Border.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/DataGrid.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Grid.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/StackPanel.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/ToolBar.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/HeaderedContentControl.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/HeaderedItemsControl.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/ListBox.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/ItemsControl.xaml"/>
+                <ResourceDictionary Source="Resources/Dictionary/Tab.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
