--- a/Source/Panama/Resources/Dictionary/Brushes.xaml
+++ b/Source/Panama/Resources/Dictionary/Brushes.xaml
@@ -1,7 +1,18 @@
 ﻿<ResourceDictionary 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-
+    
+    <!-- Brush used for text block opener -->
+    <LinearGradientBrush x:Key="OpenerBrush" StartPoint="0.00,0.00" EndPoint="1.00,0.00">
+        <GradientBrush.GradientStops>
+            <GradientStopCollection>
+                <GradientStop Color="#FF0000FF" Offset="0.000"/>
+                <GradientStop Color="#FFFF0000" Offset="0.500"/>
+                <GradientStop Color="#FF00FF00" Offset="1.000"/>
+            </GradientStopCollection>
+        </GradientBrush.GradientStops>
+    </LinearGradientBrush>
+    
     <!-- Fill Brushes -->
     <LinearGradientBrush x:Key="StatusBarBrush" StartPoint="0.00,0.00" EndPoint="1.00,1.00">
         <GradientBrush.GradientStops>
@@ -20,7 +31,6 @@
             </GradientStopCollection>
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
-
 
     <LinearGradientBrush x:Key="NormalBrush" StartPoint="0,0" EndPoint="0,1">
         <GradientBrush.GradientStops>
@@ -93,8 +103,6 @@
         </GradientBrush.GradientStops>
     </LinearGradientBrush>
     
-
-
     <LinearGradientBrush x:Key="HorizontalNormalBorderBrush" StartPoint="0,0" EndPoint="1,0">
         <GradientBrush.GradientStops>
             <GradientStopCollection>
@@ -130,4 +138,12 @@
     <!-- Miscellaneous Brushes -->
     <SolidColorBrush x:Key="GlyphBrush" Color="#444" />
     <SolidColorBrush x:Key="LightColorBrush" Color="#DDD" />
+
+    <!-- Some colors to stay consistent -->
+    <SolidColorBrush x:Key="LabelBrush" Color="#FF0D5102"/>
+    <!-- This enables the selected row to retain a highlight when the data grid loses focus. Has a problem with .Net 4.0 -->
+    <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="LightSalmon"/>
+    <!-- This works in .Net 4.0 -->
+    <!--<SolidColorBrush x:Key="{x:Static SystemColors.ControlBrushKey}" Color="LightSalmon"/>-->
+
 </ResourceDictionary>
