--- a/Source/Panama/View/PublisherView.xaml
+++ b/Source/Panama/View/PublisherView.xaml
@@ -10,10 +10,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="400">
-    <Control.Resources>
-        <ResourceDictionary Source="../Resources/Merged.xaml" />
-    </Control.Resources>
-    
     <Grid>
         <Grid.ColumnDefinitions>
             <!-- MaxWidth binds to a value relative to the width of the grid. Converter parm is the desired min width of right column -->
@@ -35,8 +31,8 @@
             <StackPanel Orientation="Horizontal">
                 <TextBlock Style="{StaticResource TextBlockMessage}" Text="{Binding Filters.RecordCountText}"/>
                 <TextBlock Style="{StaticResource TextBlockMessage}" Visibility="{Binding Config.PublisherFilter.IsAnyFilterActive,Converter={cv:BooleanToVisibilityConverter}}"> - Row filter is in effect</TextBlock>
-            </StackPanel>            
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ICMenuItems}" ItemsSource="{Binding Path=VisualCommands}"/>
+            </StackPanel>
+            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
         </Grid>
 
         <!-- Main data grid to display the tabular data  -->
