--- a/Source/Panama/View/TitleView.xaml
+++ b/Source/Panama/View/TitleView.xaml
@@ -10,9 +10,6 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignWidth="860" d:DesignHeight="355">
-    <Control.Resources>
-        <ResourceDictionary Source="../Resources/Merged.xaml" />
-    </Control.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <!-- MaxWidth binds to a value relative to the width of the grid. Converter parm is the desired min width of right column -->
@@ -36,7 +33,7 @@
                 <TextBlock Style="{StaticResource TextBlockMessage}" Text="{Binding Filters.RecordCountText}"/>
                 <TextBlock Style="{StaticResource TextBlockMessage}" Visibility="{Binding Config.TitleFilter.IsAnyFilterActive,Converter={cv:BooleanToVisibilityConverter}}"> - Row filter is in effect</TextBlock>
             </StackPanel>
-            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ICMenuItems}" ItemsSource="{Binding Path=VisualCommands}"/>
+            <ItemsControl Grid.Column="1" HorizontalAlignment="Right" Style="{StaticResource ItemsControlMenu}" ItemsSource="{Binding Path=VisualCommands}"/>
         </Grid>
 
         <!-- Main data grid to display the tabular data -->
